src/test/deca/codegen/valid/object/param_conflict.deca
//Description
//    Vérifier le mélange des noms
//
//Résultats :
//  3
//

class A{
  protected int a = 3;

  void printA(){
  print(this.a);
  }
}



{
A b = new A();
b.printA();
}
